# python-project-83

./: .gitignore  Makefile  Procfile  README.md  add_db.py  database.sql  pyproject.toml  requirements  requirements.txt
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  data_tools.py  db.py  db_tools.py  urls.py
page_analyzer/templates/: 404.html  base.html  flash.html  index.html  test.html  url_id.html  urls.html
